14 February 2012: Wouter
	- Fix sticky NS (ghost domain problem) if prefetch is yes.
	- iter forwards uses malloc inside for more dynamicity.

13 February 2012: Wouter
	- RT#2955. Fix for cygwin compilation. 
	- iana portlist updated.

10 February 2012: Wouter
	- Slightly smaller critical region in one case in infra cache.
	- Fix timeouts to keep track of query type, A, AAAA and other, if
	  another has caused timeout blacklist, different type can still probe.
	- unit test fix for nomem_cnametopos.rpl race condition.

9 February 2012: Wouter
	- Fix AHX_BROKEN_MEMCMP for autoheader mess up of #undef in config.h.

8 February 2012: Wouter
	- implement draft-ietf-dnsext-ecdsa-04; which is in IETF LC; This
	  implementation is experimental at this time and not recommended
	  for use on the public internet (the protocol numbers have not
	  been assigned).  Needs recent ldns with --enable-ecdsa.
	- fix memory leak in errorcase for DSA signatures.
	- iana portlist updated.
	- workaround for openssl 0.9.8 ecdsa sha2 and evp problem.

3 February 2012: Wouter
	- fix for windows, rename() is not posix compliant on windows.

2 February 2012: Wouter
	- 1.4.16 release tag.
	- svn trunk is 1.4.17 in development.
	- iana portlist updated.

1 February 2012: Wouter
	- Fix validation failures (like: validation failure xx: no NSEC3
	  closest encloser from yy for DS zz. while building chain of trust,
	  because of a bug in the TTL-fix in 1.4.15, it picked the wrong rdata
	  for an NSEC3.  Now it does not change rdata, and fixes TTL.

30 January 2012: Wouter
	- Fix version-number in libtool to be version-info so it produces
	  libunbound.so.2 like it should.

26 January 2012: Wouter
	- Tag 1.4.15 (same as 1.4.15rc1), for 1.4.15 release.
	- trunk 1.4.16; includes changes memset testcode, #424 openindiana,
	  and keyfile write fixup.
	- applied patch to support outgoing-interface with ub_ctx_set_option.

23 January 2012: Wouter
	- Fix memset in test code.

20 January 2012: Wouter